# nav2_with_isaac_ros_visual_slam

./: .gitignore  README.md  frames.gv  jetson_monitor.py  jetson_performance_20250810_190420.json  jetson_performance_20250810_191320.json  jetson_performance_20250810_191458.json  lab_scan.pgm  lab_scan.yaml  my_map.data  my_map_name.pgm  my_map_name.yaml
src/bearcar_launch/: CMakeLists.txt  README.md  package.xml
src/bearcar_launch/config/rviz2/: bearcar.rviz
src/bearcar_launch/config/urdf/: bearcar.urdf  bearcar.urdf.xacro
src/bearcar_launch/launch/: bearcar.launch.py  bearcar_remote_control.launch.py  direct_rc.launch.py  lidar_slam.launch.py  localization_amcl.launch.py  localization_slam.launch.py  mapping.launch.py  navigation.launch.py  perception.launch.py  planning.launch.py  recordreplay.launch.py  rplidar_launch.py  slam_mapping.launch.py  test_rc.launch.py
src/bearcar_launch/params/: T265_wheelodom_calib.json  amcl.param.yaml  costmap_2d.param.yaml  ekf.param.yaml  mapper_params_online_async.param.yaml  mapper_params_online_async.yaml  nav2.params.yaml  nav2_appras.params.yaml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml  odom_to_state_bearcar.param.yaml  realsense_d455.param.yaml  realsense_t265.param.yaml  recordreplay_planner.param.yaml  remote_control.param.yaml  rplidar.param.yaml  slam_localization.param.yaml  vesc.param.yaml  vesc_config.param.yaml  vesc_to_odom_node.param.yaml
src/bearcar_launch/scripts/: check_devices.py
src/bearcar_launch/urdf/: bearcar_simple.urdf
(+54 files in other folders)
